--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,6 @@
 /* RESPONSIVE
    https://bytutorial.com/framework-and-scripts-library/responsive
-   v1.0 30 dec 2015
+   v1.1 20 Apr 2016
    License: MIT
 */
 
@@ -230,282 +230,51 @@ select {
     background-color:#3e2e2e;
 }
 
-/************ HEADER AND MENU ********/
-header{
-  width: auto;
-  margin-bottom:20px;
-  width: auto;
-  background:#000;
-  min-height:55px;
-}
-
-#nav-panel,
-#nav-panel ul,
-#nav-panel ul li,
-#nav-panel ul li a{
-	margin:0;
-	padding:0;
-	list-style:none;
-	display:block;
-}
-
-#logo{
-	color:#fff;
-	padding-left:20px;
-	line-height:55px;
-	text-align:center;
-}
-
-#logo > #logo-content{
-	display:inline-block;
-	margin:0 auto;
-	cursor:pointer;
-}
-
-#logo.left-side{
-	text-align:left;
-	padding-left:50px;
-}
-
-#logo.right-side{
-	text-align:right;
-	padding-right:20px;
-}
-
-#menu-button{
-	height:12px;
-	width:22px;
-	position:absolute;
-	top:10px;
-	left:10px;
-	cursor:pointer;
-	padding:10px;
-}
-
-#menu-button:hover{
-	background:#1d92cf;
-}
-
-#menu-button.left-side{
-	left:10px;
-}
-
-#menu-button.right-side{
-	left:auto;
-	right:10px;
-}
-
-#menu-button::after,
-#menu-button.left-side::after {
-	display: block;
-	content: ' ';
-	position: absolute;
-	height: 3px;
-	width: 22px;
-	border-top: 2px solid #d3eced;
-	border-bottom: 2px solid #d3eced;
-	z-index:350;
-}
-
-
-#menu-button::before,
-#menu-button.left-side::before {
-	display: block;
-	content: ' ';
-	position: absolute;
-	height: 3px;
-	width: 22px;
-	border-top: 2px solid #d3eced;
-	z-index:350;
-	top:20px;
-}
-
-
-#nav-panel > .nav-menu{
-	display:none;
-	border-top:solid 1px #574f4f;
-	background:#000;
-	min-height:100%;
-	height:100%;
-}
-
-#nav-panel ul li a{
-	padding:8px 20px;
-	color: #e6e6e6;
-	text-decoration: none;
-	border-bottom: 1px solid #1a1a1a;
-}
-
-#nav-panel ul li a:hover{
-	transition: all 0.25s ease-out;
-	background: #1d92cf;
-}
-	
-#nav-panel ul li ul li a{
-	padding-left:35px;
-}
-
-#nav-panel ul li ul li ul li a{
-	padding-left:55px;
-}
-
-/**** ANIMATION *****/
-body.right-slide{
-	transform: translateX(-240px);
-	-webkit-transform: translateX(-240px);
-}
-
-body.left-slide{
-	transform: translateX(240px);
-	-webkit-transform: translateX(240px);
-}
-
-#transparent-bg{
-	background:#000;
-	opacity:.6;
-	-ms-filter:Alpha(Opacity=60);
-	position:fixed;
-	left:0;
-	top:0;
-	width:100%;
-	height:100%;
-	z-index:200;
-	display:none;
-}
-
-#ul-menu.left-slide,
-#ul-menu.right-slide{
-	position:absolute;
-	right:-240px;
-	top:0px;
-	width:240px;
-	display:block;
-	min-height:100%;
-	z-index:300;
-}
-
-#ul-menu.left-slide{
-	left:-240px;
-}
-
-@media (min-width: 768px) {
-	#logo{
-		float:left;
-	}
-	
-	#nav-panel > .nav-menu{
-		float:right;
-		display:block;
-		border:0;
-	}
-	
-	#nav-panel ul li{
-		float:left;
-		position:relative;
-	}
-	
-	#nav-panel > .nav-menu > li > a{
-		padding: 0px 22px;
-		border-right: 1px solid #4e4e4e;
-		border-bottom:none;
-		line-height:55px;
-	}
-	
-	#nav-panel > .nav-menu > li:last-child > a{
-		border:none;
-	}
-	
-	#nav-panel ul li ul{
-		display:none;
-	}
-	
-	#nav-panel ul > li:hover > ul{
-		display:block;
-		position:absolute;
-		top:55px;
-		left:0;
-		background:#000;
-		z-index:100;
-		min-width: 200px;
-		moz-border-radius: 0 0 5px 5px;   
-		-webkit-border-radius: 0 0 5px 5px; 
-		border-radius: 0 0 5px 5px;
-	}
-	
-	#nav-panel ul li ul li a, #nav-panel ul li ul li ul li a{
-		padding:10px 17px;
-		border-bottom:solid 1px #4e4e4e;
-	}
-	
-	#nav-panel ul > li > ul > li:last-child > a{
-		border-bottom:none;
-		moz-border-radius: 0 0 5px 5px;   
-		-webkit-border-radius: 0 0 5px 5px; 
-		border-radius: 0 0 5px 5px;
-	}
-	
-	#nav-panel ul li ul li{
-		float:none;
-	}
-	
-	#nav-panel ul li:hover ul li:hover a:hover{
-		transition: all 0.25s ease-out;
-		background: #2c2c2c;
-	}
-	
-	#nav-panel ul > li:hover > ul > li:hover ul{
-		top:0;
-		left:200px;
-	}
-}
 
 /************ GRID **************/
-/*** FORMULA:   (100 - (((12/n)-1) * 5) / 12) * n  **/
-/* For devices larger than 768px */
+/*
+var percentageLeftRight   = 3;   // percentage value
+var noOfColumns           = 12;  // no of columns
+for(var i = 1; i <= noOfColumns; i++){
+	var result = ((100 - (((noOfColumns/i)-1) * percentageLeftRight))/noOfColumns) * i;
+}
+*/
 @media (min-width: 768px) {
-	#menu-button{
-		display:none;
-	}
-	
-	ul#ul-menu{
-		display:none;
-		border:solid 2px yellow;
-		background:yellow;
-	}
 	
 	.column{
 		float:left;
-		margin-left:5%;
+		margin-left:3%;
 	}
 	
-	.column:first-child{
+	.row .column:first-child, .column:first-child{
 		margin-left:0;
 	}
 	
-	.column-1 	{ width:3.75%;}
-	.column-2 	{ width:12.5%;}
-	.column-3 	{ width:21.25%;}
-	.column-4 	{ width:30%;}
-	.column-5 	{ width:38.75%;}
-	.column-6 	{ width:47.5%;}
-	.column-7 	{ width:56.25000000000001%}
-	.column-8 	{ width:65%}
-	.column-9 	{ width:73.75%}
-	.column-10 	{ width:82.5%}
-	.column-11 	{ width:91.25%}
+	.column-1 	{ width:5.583333333333333%;}
+	.column-2 	{ width:14.166666666666666%;}
+	.column-3 	{ width:22.75%;}
+	.column-4 	{ width:31.333333333333332%;}
+	.column-5 	{ width:39.916666666666664%;}
+	.column-6 	{ width:48.5%;}
+	.column-7 	{ width:57.083333333333336%}
+	.column-8 	{ width:65.66666666666667%}
+	.column-9 	{ width:74.25%}
+	.column-10 	{ width:82.83333333333333%}
+	.column-11 	{ width:91.41666666666667%}
 	.column-12 	{ width: 100%; margin-left: 0;}
 	
-	.column.offset-column-1 		{ margin-left:96.25%;}
-	.column.offset-column-2 		{ margin-left:87.5%;}
-	.column.offset-column-3 		{ margin-left:78.75%;}
-	.column.offset-column-4 		{ margin-left:70%;}
-	.column.offset-column-5 		{ margin-left:61.25%;}
-	.column.offset-column-6 		{ margin-left:52.5%;}
-	.column.offset-column-7 		{ margin-left:43.74999999999999%}
-	.column.offset-column-8 		{ margin-left:35%}
-	.column.offset-column-9 		{ margin-left:26.25%}
-	.column.offset-column-10 	{ margin-left:17.5%}
-	.column.offset-column-11 	{ margin-left:8.75%}
+	
+	.column.offset-column-1 		{ margin-left:94.41666666666667%;}
+	.column.offset-column-2 		{ margin-left:85.83333333333333%;}
+	.column.offset-column-3 		{ margin-left:77.25%;}
+	.column.offset-column-4 		{ margin-left:68.66666666666667%;}
+	.column.offset-column-5 		{ margin-left:60.083333333333336%;}
+	.column.offset-column-6 		{ margin-left:51.5%;}
+	.column.offset-column-7 		{ margin-left:42.916666666666664%}
+	.column.offset-column-8 		{ margin-left:34.33333333333333%}
+	.column.offset-column-9 		{ margin-left:25.75%}
+	.column.offset-column-10 	{ margin-left:17.16666666666667%}
+	.column.offset-column-11 	{ margin-left:8.583333333333329%}
 	
 	input[type="text"],
 	input[type="password"],
